Sonar issues are fixed