@@ -16,7 +16,6 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -51,7 +50,7 @@ public class CommentService {
         return commentRepository.findByPost(post)
                 .stream()
                 .map(commentMapper::mapToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<CommentDto> getAllCommentsForUser(String username) {
@@ -60,7 +59,7 @@ public class CommentService {
         return commentRepository.findAllByUser(user)
                 .stream()
                 .map(commentMapper::mapToDto)
-                .collect(Collectors.toList());
+                .toList();
 
     }
 }
